file baris ke sekian diedit

--- a/file1.html
+++ b/file1.html
@@ -10,5 +10,6 @@
     <h2>Data Pribadi</h2>
     <li>Nama : Mila Meliana</li>
     <li>Hoby : Memasak</li>
+    <li>Alamat : Tasikmalaya</li>
 </body>
 </html>
